...
        floatingActionButtonPosition = FabPosition.End
    ) { padding ->
        val todos = viewModel.todos.collectAsState()
        TodoItemList(
            modifier = Modifier
                .padding(padding)
                .semantics { contentDescription = "Home Screen" },
            list = todos.value,
            onChecked = { todo: Todo, state: Boolean -> viewModel.checklistTodo(todo, state) },
            onTodoClicked = onTodoClicked,
            onTodoSwiped = { todo -> viewModel.deleteTodo(todo) }
        )
    }
...
