...
            )
        }
    ) { paddingValues ->
        DetailContent(
            modifier = Modifier
                .padding(paddingValues)
                .semantics { contentDescription = "Detail Screen" }
            ,
            todo = rememberTodo.value,
            titleText = titleText,
            descriptionText = descriptionText,
            error = error,
            showError = showError,
...
